@startuml

class Student {
    - name: String
    - age: int
    - address: String
    --
    + int getAge()
    + void inputInfoStudent()
    + void displayInfoStudent()
}

class Class {
    - nameClass: String
    - listStudents: vector<shared_ptr<Student>>
    --
    + void inputInfoClass()
    + void displayInfoClass()
}

class School {
    - listClass: vector<Class>
    --
    + void addClass()
    + void displaySchool()
}

Class o--> Student
School o--> Class

@enduml
